# Night_Market

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  DASHBOARD_IMPROVEMENTS.md  IMPLEMENTATION.md  Makefile  README.md  TROUBLESHOOTING.md  api_examples.md  blackbox_mcp_settings.json  claude.md  claude_latest.md  docker-compose.services.yml  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak.1756259125  docker-compose.yml.save  k6_script.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
backend/: Dockerfile  alembic.ini  database.py  main.py  models.py  requirements.txt  seed.py  start.sh
docs/: API.md  DEVELOPMENT.md  FRONTEND_HANDOFF.md  refactor-report.md  ui-audit.md  ui-issues.md  ui-roadmap.md
frontend/: Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tailwind.config.ts.bak  test.html  tsconfig.node.json  vite.config.ts  vitest.config.ts
infra/: prometheus.services.yml  prometheus.yml
job-search-automation-app/: README.md  package.json  tsconfig.json
modelsrv/: Dockerfile  server.py
scripts/: bootstrap_envs.sh  bootstrap_python.sh  doctor.sh
services/: Dockerfile  alembic.ini  database.py  main.py  models.py  schemas_monolithic.py.bak  seed.py  seed_sprint1.py
tests/: conftest.py  test_api_auth.py  test_api_laces.py  test_api_signals.py  test_geospatial.py  test_laces.py
worker/: Dockerfile  __init__.py  celerybeat-schedule  celeryconfig.py  (+2 more)
(+317 files in other folders)
